--- a/gmall-cart-web/src/main/resources/templates/cartList.html
+++ b/gmall-cart-web/src/main/resources/templates/cartList.html
@@ -86,7 +86,8 @@
 
                     <div>
                         <ol>
-                            <li><input type="checkbox"   class="check"   onchange="checkSku(this)"  /></li>
+                            <li><input type="checkbox"   class="check"   onchange="checkSku(this)" th:value="${cartInfo.skuId}"
+                              th:checked="${cartInfo.isChecked}==1"/></li>
                             <li>
                                 <dt><img   th:src="${cartInfo.imgUrl}" alt=""></dt>
                                 <dd  onclick="'toItem('+${cartInfo.skuId}+')'">
